--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.3",
@@ -32,6 +34,7 @@
     "babel-runtime": "^6.26.0",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.11",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.3.4"
   }
 }
